# consonare

./: .codespellrc  .envrc  Cargo.toml  LICENSE  README.md  devenv.nix  keys_upright-piano_e4_ablation_minima_shift.csv  keys_upright-piano_e4_ablation_summary.csv
consonare-cli/: Cargo.toml
consonare-cli/src/: common.rs  heatmap.rs  main.rs  plot.rs  util.rs  visualise.rs
consonare-core/: Cargo.toml
consonare-core/src/: common.rs  diagnostics.rs  dissonance.rs  dissonance_n.rs  f0.rs  inharmonicity.rs  input.rs  intervals.rs  lib.rs  musician.rs  partials.rs  preprocess.rs  weighting.rs
docs/proposal/: refs.bib
papers/proposal/: main.typ
papers/report/: main.typ  refs.bib
slides/: main.typ
